--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="Spax's Site List">
         <meta property="og:description" content="A place that links every public page to my website.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
+        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -67,7 +67,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                 <a href=changelog>Changelog</a><br>
-                The manually edited changelog for the site. Currently being updated every day I make major changes on the site so that I don't regret not documenting it in the future.
+                The manually edited changelog for the site. Currently being updated every day I make major changes on the site so that I don't regret not documenting it in the future. (I really need to update this.)
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
@@ -79,7 +79,19 @@
             <div class="text-box flex-container unselectable">
                 <div>
                 <a href=plannedchanges>Planned Changes</a><br>
-                Here I'll try to do weekly updates stating what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. 
+                Here I'll try to do weekly updates stating what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. (I really need to update this too.)
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                <a href=MojoArrowAdvice>Mojo's Arrow Advice</a><br>
+                This is my Create project that I made for my AP Computer Science Principles class! This program is not endorsed by BrotherMojo at all by the way. 
+                </div>
+            </div>
+            <div class="text-box flex-container unselectable">
+                <div>
+                <a href=mrc3timezones>Mods Rush Couples 3 Team Timezones</a><br>
+                I collabed with two other people for a Mods Rush in NotITG, and I made this site so that everyone on the team could see each other's times easier!
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
