updated sitelist metadata

--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube, site list">
         <meta property="og:title" content="Spax's Site List">
-        <meta property="og:description" content="A place that links every public page to my website.">
+        <meta property="og:description" content="A place that links every public page currently on my website!">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
