--- a/html/changelog.html
+++ b/html/changelog.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="All Spax DEP Face Sprites">
         <meta property="og:description" content="Manually documenting major changes to the site.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
+        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -24,6 +24,103 @@
                     <span class="large">- Changelog -<br>
                     Manually documenting major changes to the site<br></span>
                     <br>
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Thursday, Mar 17, 2022</u><br>
+                - Updated the changelog!
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Saturday, Mar 12, 2022</u><br>
+                - Attempted to add custom HTML tags for the text boxes to be easier to write but it didn't work out
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Thursday, Mar 10, 2022</u><br>
+                - Removed the placeholder text from the create project site and fully embedded the program<br>
+                &nbsp;&nbsp; • Also added a control key
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Wednesday, Mar 9, 2022</u><br>
+                - Added <a href="../html/MojoArrowAdvice">my create project</a> to the site (was a skeleton page at first because I didn't know how to embed the program)
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Sunday, Mar 6, 2022</u><br>
+                - Added the bootstrap locally so that I can work on the site offline without it looking funky and so the code linking the bootstrap looks cleaner overall<br>
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Saturday, Mar 5, 2022</u><br>
+                - Tried making the scroll parallax also scroll left for a more interesting look (and failed)<br>
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Thursday, Mar 3, 2022</u><br>
+                - Added the text from the intro cutscene to the DEP All Dialogue page<br>
+                - Deleted some placeholder text boxes that I was using for that page<br>
+                - Fixed some of the CSS with the window rescaling (it snaps correctly now and all the margins are correct)
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Wednesday, Mar 2, 2022</u><br>
+                - ADDED MORE .DS_STORE FILES TO THE .GITIGNORE<br>
+                - Added the "<a href="../html/DEPalldialogue">All DEP Dialogue" page as a gift to the DEP community<br>
+                &nbsp;&nbsp; • I didn't add any text boxes yet; this was just making the site
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Tuesday, Mar 1, 2022</u><br>
+                - Fixed some of the linked webpages not working in a few of the files<br>
+                - My never-ending journey to make the text boxes the closest to what it looks like in the game continues with a text align fix<br>
+                - Updated the <a href="../html/isspaxatschool">Is Spax At School</a> site that removed the not working javascript and added a live time for me (thanks to the MRC3 timezone code I wrote) and included an "I do this at this time" key at the bottom. I will one day come back to fix the javascript.<br>
+                &nbsp;&nbsp; • Added discord's status colors in the CSS<br>
+                - Added a file that makes it so the .html extension doesn't need to be in the url for the site to work
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Monday, Feb 28, 2022</u><br>
+                - Added the .DS_Store file (mac metadata for folders) to .gitignore because it sucks<br>
+                - Made a beta changes folder and moved the face sprites to a separate image folder<br>
+                - Fixed the deleted bootstrap that was causing the text boxes to break<br>
+                &nbsp;&nbsp; • At the same time, I updated the "haha edgy" page under my school's wifi and got sent home by my school for it. That was very fun<br>
+                &nbsp;&nbsp; • I also had to figure out how to undo commits, which was impossible, so I ended up making a new commit with the old changes reverted
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Thursday, Feb 17, 2022</u><br>
+                - Corrected a single error in the MRC3 timezone site and tried to add an automatic refresh (also refactored the javascript)<br>
+                - Decided to do a site overhaul with more organized folders and stuff<br>
+                &nbsp;&nbsp; • This ended up being a bad idea because when relinking all the pages, I took out some lines of code that I thought I didn't need, one of which being bootstrap, and somehow the text boxes break without it. This drove me nuts
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Wednesday, Feb 16, 2022</u><br>
+                - Correctly implemented the background scroll parallax with help from HeySora :tada:<br>
+                - Fixed some of page metatada because I forgot to change it when copy/pasting code to make new webpages<br>
+                - Added a <a href="../html/mrc3timezones">timezone</a> page for my team participating in MRC3<br>
+                - Fixed the weird characters that didn't translate ISO to UTF-8 correctly when copy-pasting stuff in the index.html
+                </div>
+            </div>
+            <div class="text-box long-flex-container unselectable">
+                <div>
+                <u>Tuesday, Feb 15, 2022</u><br>
+                - Added a "<a href="../html/contactme">contact me</a>" page when I'm supposedly at school (this will probably never get used)<br>
+                - Tried to add background parallax
                 </div>
             </div>
             <div class="text-box long-flex-container unselectable">
