whoops fixed an anchor error

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -75,7 +75,7 @@
                 <div>
                 <u>Wednesday, Mar 2, 2022</u><br>
                 - ADDED MORE .DS_STORE FILES TO THE .GITIGNORE<br>
-                - Added the "<a href="../html/DEPalldialogue">All DEP Dialogue" page as a gift to the DEP community<br>
+                - Added the "<a href="../html/DEPalldialogue">All DEP Dialogue</a>" page as a gift to the DEP community<br>
                 &nbsp;&nbsp; • I didn't add any text boxes yet; this was just making the site
                 </div>
             </div>
