--- a/html/changelog.html
+++ b/html/changelog.html
@@ -48,7 +48,7 @@
             <div class="text-box long-flex-container unselectable">
                 <div>
                 <u>Wednesday, Mar 9, 2022</u><br>
-                - Added <a href="../html/MojoArrowAdvice">my create project</a> to the site (was a skeleton page at first because I didn't know how to embed the program)
+                - Added <a href="../html/MojoArrowAdvice" target="_blank">my create project</a> to the site (was a skeleton page at first because I didn't know how to embed the program)
                 </div>
             </div>
             <div class="text-box long-flex-container unselectable">
@@ -75,7 +75,7 @@
                 <div>
                 <u>Wednesday, Mar 2, 2022</u><br>
                 - ADDED MORE .DS_STORE FILES TO THE .GITIGNORE<br>
-                - Added the "<a href="../html/DEPalldialogue">All DEP Dialogue</a>" page as a gift to the DEP community<br>
+                - Added the "<a href="../html/DEPalldialogue" target="_blank">All DEP Dialogue</a>" page as a gift to the DEP community<br>
                 &nbsp;&nbsp; • I didn't add any text boxes yet; this was just making the site
                 </div>
             </div>
@@ -84,7 +84,7 @@
                 <u>Tuesday, Mar 1, 2022</u><br>
                 - Fixed some of the linked webpages not working in a few of the files<br>
                 - My never-ending journey to make the text boxes the closest to what it looks like in the game continues with a text align fix<br>
-                - Updated the <a href="../html/isspaxatschool">Is Spax At School</a> site that removed the not working javascript and added a live time for me (thanks to the MRC3 timezone code I wrote) and included an "I do this at this time" key at the bottom. I will one day come back to fix the javascript.<br>
+                - Updated the <a href="../html/isspaxatschool" target="_blank">Is Spax At School</a> site that removed the not working javascript and added a live time for me (thanks to the MRC3 timezone code I wrote) and included an "I do this at this time" key at the bottom. I will one day come back to fix the javascript.<br>
                 &nbsp;&nbsp; • Added discord's status colors in the CSS<br>
                 - Added a file that makes it so the .html extension doesn't need to be in the url for the site to work
                 </div>
