--- a/html/changelog.html
+++ b/html/changelog.html
@@ -112,14 +112,14 @@
                 <u>Wednesday, Feb 16, 2022</u><br>
                 - Correctly implemented the background scroll parallax with help from HeySora :tada:<br>
                 - Fixed some of page metatada because I forgot to change it when copy/pasting code to make new webpages<br>
-                - Added a <a href="../html/mrc3timezones">timezone</a> page for my team participating in MRC3<br>
+                - Added a <a href="../html/mrc3timezones" target="_blank">timezone</a> page for my team participating in MRC3<br>
                 - Fixed the weird characters that didn't translate ISO to UTF-8 correctly when copy-pasting stuff in the index.html
                 </div>
             </div>
             <div class="text-box long-flex-container unselectable">
                 <div>
                 <u>Tuesday, Feb 15, 2022</u><br>
-                - Added a "<a href="../html/contactme">contact me</a>" page when I'm supposedly at school (this will probably never get used)<br>
+                - Added a "<a href="../html/contactme" target="_blank">contact me</a>" page when I'm supposedly at school (this will probably never get used)<br>
                 - Tried to add background parallax
                 </div>
             </div>
