--- a/html/changelog.html
+++ b/html/changelog.html
@@ -8,7 +8,7 @@
         <meta property="og:description" content="Manually documenting major changes to the site.">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <a rel="icon" href="../images/icons/Smirk_Circle.png"></a>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <script src="../js/bootstrap.min.js"></script>
