--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="All DEP Dialogue">
         <meta property="og:description" content="A dump of all dialogue in Temmie's game &quot;Dweller's Empty Path&quot;.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/yoki/Neutral.png">
+        <meta name="og:image" itemprop="image" content="../images/icons/faces/yoki/Neutral.ico">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
