--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="Mojo's Arrow Advice!">
         <meta property="og:description" content="My create project.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
+        <meta name="og:image" itemprop="image" content="../images/icons/faces/spax/Smirk.ico">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
