--- a/html/changelog.html
+++ b/html/changelog.html
@@ -7,8 +7,8 @@
         <meta property="og:title" content="All Spax DEP Face Sprites">
         <meta property="og:description" content="Manually documenting major changes to the site.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/x-icon">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png" type="image/x-icon"></link>
+        <meta name="og:image" itemprop="image" content="../images/icons/faces/spax/Smirk.ico">
+        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <script src="../js/bootstrap.min.js"></script>
