--- a/html/allspaxfaces.html
+++ b/html/allspaxfaces.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="All Spax DEP Face Sprites">
         <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="images/faces/spax/Smirk.png">
+        <meta name="og:image" itemprop="image" content="../images/icons/faces/spax/Smirk.ico">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
