--- a/html/resources.html
+++ b/html/resources.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="Resources">
         <meta property="og:description" content="Test page.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/icons/faces/spax/Smirk.ico">
+        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
         <!---->
         <!--<meta http-equiv="Refresh" content="0; url='sitelist'"/>-->
         <!---->
