--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -8,7 +8,7 @@
         <meta property="og:title" content="Spax's Site List">
         <meta property="og:description" content="A place that links every public page currently on my website!">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/icons/faces/spax/Smirk.ico">
+        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
