--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="All Spax DEP Face Sprites">
         <meta property="og:description" content="All of the changes that I'm planning on making for the website soon!">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/icons/faces/spax/Smirk.ico">
+        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
         <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
