fanart page complete

--- a/html/fanart.html
+++ b/html/fanart.html
@@ -38,10 +38,67 @@
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
-                    <img src="../images/misc/neko.png"></img><br>
+                    <img src="../images/misc/fanart/gunk_neko.png"></img><br>
+                    Drawn by gunk
+                </div>
+            </div>
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/uray_neko.png"></img><br>
                     Drawn by URAY
                 </div>
             </div>
+            <!--
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/bananas_spax_idle.gif"></img><br>
+                    Drawn by 1LikeBananas<br>(commission)
+                </div>
+            </div>
+            -->
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/bananas_spax_4-1.jpg"></img><br>
+                    <img src="../images/misc/fanart/bananas_spax_4-2.jpg"></img><br>
+                    <img src="../images/misc/fanart/bananas_spax_4-3.jpg"></img><br>
+                    Modelled/3D-printed by 1LikeBananas
+                </div>
+            </div>
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/bananas_spax_3-2.png"></img><br>
+                    Drawn by 1LikeBananas
+                </div>
+            </div>
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/bananas_spax_2-2.gif"></img><br>
+                    Drawn by 1LikeBananas
+                </div>
+            </div>
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/bananas_spax_1a.png"></img><br>
+                    <!--
+                    <img src="../images/misc/fanart/bananas_spax_1b.png"></img><br>
+                    -->
+                    <img src="../images/misc/fanart/bananas_spax_1c.png"></img><br>
+                    Drawn by 1LikeBananas
+                </div>
+            </div>
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/wasabi_spax_1.png"></img><br>
+                    Drawn by Wasabi
+                </div>
+            </div>
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/midna_spax.png"></img><br>
+                    Drawn by Midna
+                </div>
+            </div>
+
             <div class="text-box flex-container unselectable">
                 <div>
                     (<a href="../html/main">Click here</a> to go back to the main page!)
