--- a/html/fanart.html
+++ b/html/fanart.html
@@ -39,20 +39,20 @@
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/gunk_neko.png"></img><br>
-                    Drawn by gunk
+                    Drawn by <a href="discord.com/users/518490426261372931/">gunk</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/uray_neko.png"></img><br>
-                    Drawn by URAY
+                    Drawn by <a href="discord.com/users/260236669041639425/">URAY</a>
                 </div>
             </div>
             <!--
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/bananas_spax_idle.gif"></img><br>
-                    Drawn by 1LikeBananas<br>(commission)
+                    Drawn by <a href="discord.com/users/590639673433653248/">1LikeBananas</a><br>(commission)
                 </div>
             </div>
             -->
@@ -61,19 +61,19 @@
                     <img src="../images/misc/fanart/bananas_spax_4-1.jpg"></img><br>
                     <img src="../images/misc/fanart/bananas_spax_4-2.jpg"></img><br>
                     <img src="../images/misc/fanart/bananas_spax_4-3.jpg"></img><br>
-                    Modelled/3D-printed by 1LikeBananas
+                    Modelled/3D-printed by <a href="discord.com/users/590639673433653248/">1LikeBananas</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/bananas_spax_3-2.png"></img><br>
-                    Drawn by 1LikeBananas
+                    Drawn by <a href="discord.com/users/590639673433653248/">1LikeBananas</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/bananas_spax_2-2.gif"></img><br>
-                    Drawn by 1LikeBananas
+                    Drawn by <a href="discord.com/users/590639673433653248/">1LikeBananas</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
@@ -83,19 +83,19 @@
                     <img src="../images/misc/fanart/bananas_spax_1b.png"></img><br>
                     -->
                     <img src="../images/misc/fanart/bananas_spax_1c.png"></img><br>
-                    Drawn by 1LikeBananas
+                    Drawn by <a href="discord.com/users/590639673433653248/">1LikeBananas</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
-                <div>
+                <div>801843375102885888
                     <img src="../images/misc/fanart/wasabi_spax_1.png"></img><br>
-                    Drawn by Wasabi
+                    Drawn by <a href="discord.com/users/801843375102885888/">Wasabi</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/midna_spax.png"></img><br>
-                    Drawn by Midna
+                    Drawn by <a href="discord.com/users/145929070209794049/">Midna</a>
                 </div>
             </div>
 
