--- a/html/fanart.html
+++ b/html/fanart.html
@@ -38,6 +38,12 @@
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
+                    <img src="../images/misc/fanart/bean_spax.png"></img><br>
+                    Drawn by <a href="discord.com/users/685328250548781066/">bean</a>
+                </div>
+            </div>
+            <div class="fart-text-box fart-flex-container">
+                <div>
                     <img src="../images/misc/fanart/gunk_neko.png"></img><br>
                     Drawn by <a href="discord.com/users/518490426261372931/">gunk</a>
                 </div>
