whoops forgot to delete something

--- a/html/fanart.html
+++ b/html/fanart.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
-                <div>801843375102885888
+                <div>
                     <img src="../images/misc/fanart/wasabi_spax_1.png"></img><br>
                     Drawn by <a href="discord.com/users/801843375102885888/">Wasabi</a>
                 </div>
