--- a/html/fanart.html
+++ b/html/fanart.html
@@ -54,6 +54,12 @@
                     Drawn by <a href="discord.com/users/260236669041639425/">URAY</a>
                 </div>
             </div>
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/timber_spax_group.png"></img><br>
+                    Drawn by <a href="discord.com/users/650333611475730433/">Timber</a>
+                </div>
+            </div>
             <!--
             <div class="fart-text-box fart-flex-container">
                 <div>
