added more arte

--- a/html/fanart.html
+++ b/html/fanart.html
@@ -56,8 +56,20 @@
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
-                    <img src="../images/misc/fanart/timber_spax_group.png"></img><br>
-                    Drawn by <a href="discord.com/users/650333611475730433/">Timber</a>
+                    <img src="../images/misc/fanart/n3therwolf_spax.jpg"></img><br>
+                    Drawn by <a href="discord.com/users/907467523090448414/">N3therwolf</a>
+                </div>
+            </div>
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/cyus_spax.png"></img><br>
+                    Drawn by <a href="discord.com/users/284123108212867074/">Cyus</a>
+                </div>
+            </div>
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/minty_spax.jpg"></img><br>
+                    Drawn by <a href="discord.com/users/667471786560061440/">minty</a>
                 </div>
             </div>
             <!--
@@ -68,6 +80,12 @@
                 </div>
             </div>
             -->
+            <div class="fart-text-box fart-flex-container">
+                <div>
+                    <img src="../images/misc/fanart/timber_spax_group.png"></img><br>
+                    Drawn by <a href="discord.com/users/650333611475730433/">Timber</a>
+                </div>
+            </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/bananas_spax_4-1.jpg"></img><br>
