--- a/html/fanart.html
+++ b/html/fanart.html
@@ -39,51 +39,51 @@
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/bean_spax.png"></img><br>
-                    Drawn by <a href="discord.com/users/685328250548781066/">bean</a>
+                    Drawn by <a href="https://discord.com/users/685328250548781066/" target="_blank">bean</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/gunk_neko.png"></img><br>
-                    Drawn by <a href="discord.com/users/518490426261372931/">gunk</a>
+                    Drawn by <a href="https://discord.com/users/518490426261372931/" target="_blank">gunk</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/uray_neko.png"></img><br>
-                    Drawn by <a href="discord.com/users/260236669041639425/">URAY</a>
+                    Drawn by <a href="https://discord.com/users/260236669041639425/" target="_blank">URAY</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/n3therwolf_spax.jpg"></img><br>
-                    Drawn by <a href="discord.com/users/907467523090448414/">N3therwolf</a>
+                    Drawn by <a href="https://discord.com/users/907467523090448414/" target="_blank">N3therwolf</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/cyus_spax.png"></img><br>
-                    Drawn by <a href="discord.com/users/284123108212867074/">Cyus</a>
+                    Drawn by <a href="https://discord.com/users/284123108212867074/" target="_blank">Cyus</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/minty_spax.jpg"></img><br>
-                    Drawn by <a href="discord.com/users/667471786560061440/">minty</a>
+                    Drawn by <a href="https://discord.com/users/667471786560061440/" target="_blank">minty</a>
                 </div>
             </div>
             <!--
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/bananas_spax_idle.gif"></img><br>
-                    Drawn by <a href="discord.com/users/590639673433653248/">1LikeBananas</a><br>(commission)
+                    Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a><br>(commission)
                 </div>
             </div>
             -->
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/timber_spax_group.png"></img><br>
-                    Drawn by <a href="discord.com/users/650333611475730433/">Timber</a>
+                    Drawn by <a href="https://discord.com/users/650333611475730433/" target="_blank">Timber</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
@@ -91,19 +91,19 @@
                     <img src="../images/misc/fanart/bananas_spax_4-1.jpg"></img><br>
                     <img src="../images/misc/fanart/bananas_spax_4-2.jpg"></img><br>
                     <img src="../images/misc/fanart/bananas_spax_4-3.jpg"></img><br>
-                    Modelled/3D-printed by <a href="discord.com/users/590639673433653248/">1LikeBananas</a>
+                    Modelled/3D-printed by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/bananas_spax_3-2.png"></img><br>
-                    Drawn by <a href="discord.com/users/590639673433653248/">1LikeBananas</a>
+                    Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/bananas_spax_2-2.gif"></img><br>
-                    Drawn by <a href="discord.com/users/590639673433653248/">1LikeBananas</a>
+                    Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
@@ -113,19 +113,19 @@
                     <img src="../images/misc/fanart/bananas_spax_1b.png"></img><br>
                     -->
                     <img src="../images/misc/fanart/bananas_spax_1c.png"></img><br>
-                    Drawn by <a href="discord.com/users/590639673433653248/">1LikeBananas</a>
+                    Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/wasabi_spax_1.png"></img><br>
-                    Drawn by <a href="discord.com/users/801843375102885888/">Wasabi</a>
+                    Drawn by <a href="https://discord.com/users/801843375102885888/" target="_blank">Wasabi</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container">
                 <div>
                     <img src="../images/misc/fanart/midna_spax.png"></img><br>
-                    Drawn by <a href="discord.com/users/145929070209794049/">Midna</a>
+                    Drawn by <a href="https://discord.com/users/145929070209794049/" target="_blank">Midna</a>
                 </div>
             </div>
 
