added svg thing

--- a/html/fanart.html
+++ b/html/fanart.html
@@ -118,8 +118,21 @@
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
+                    <img src="../images/misc/fanart/whizzy_spax_booba.png"></img><br>
+                    Drawn by <a href="https://discord.com/users/329061333712633861/" target="_blank">Whizzy</a>
+                </div>
+            </div>
+            <div class="fart-text-box fart-flex-container unselectable">
+                <div>
+                    <!--
+                    Hi person reading this for some reason! As you'll see below this, I have vectorized the artwork, however I linked the rasterized one for simplicity. If you wanna download the actual vector art, go here!
+                    https://spiritaxolotl.github.io/images/misc/fanart/spiritaxolotl_full.svg
+                    Enjoy!
+                    -Spax
+                    -->
                     <img src="../images/misc/fanart/wasabi_spax_1.png"></img><br>
-                    Drawn by <a href="https://discord.com/users/801843375102885888/" target="_blank">Wasabi</a><br>(requested)
+                    <img src="../images/misc/fanart/spiritaxolotl_full.png"></img><br>
+                    Drawn by <a href="https://discord.com/users/801843375102885888/" target="_blank">Wasabi</a>, and vectorized by <a href="https://discord.com/users/545395873891483662/" target="_blank">me</a><br>(requested)
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
