--- a/html/fanart.html
+++ b/html/fanart.html
@@ -118,6 +118,7 @@
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
+                    <!--<img src="../images/misc/debug_line.png"></img><br>-->
                     <img src="../images/misc/fanart/whizzy_spax_booba.png"></img><br>
                     Drawn by <a href="https://discord.com/users/329061333712633861/" target="_blank">Whizzy</a>
                 </div>
@@ -131,12 +132,13 @@
                     -Spax
                     -->
                     <img src="../images/misc/fanart/wasabi_spax_1.png"></img><br>
-                    <img src="../images/misc/fanart/spiritaxolotl_full.png"></img><br>
-                    Drawn by <a href="https://discord.com/users/801843375102885888/" target="_blank">Wasabi</a>, and vectorized by <a href="https://discord.com/users/545395873891483662/" target="_blank">me</a><br>(requested)
+                    <!--<img src="../images/misc/fanart/spiritaxolotl_full.png"></img><br>-->
+                    Drawn by <a href="https://discord.com/users/801843375102885888/" target="_blank">Wasabi</a><!--, and vectorized by <a href="https://discord.com/users/545395873891483662/" target="_blank">me</a>--><br>(requested)
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
+                    <!--<img src="../images/misc/debug_line.png"></img><br>-->
                     <img src="../images/misc/fanart/midna_spax.png"></img><br>
                     Drawn by <a href="https://discord.com/users/145929070209794049/" target="_blank">Midna</a><br>(requested)
                 </div>
