fixed last text box

--- a/html/fanart.html
+++ b/html/fanart.html
@@ -144,7 +144,7 @@
                 </div>
             </div>
 
-            <div class="fart-text-box fart-flex-container unselectable">
+            <div class="text-box flex-container unselectable">
                 <div>
                     (<a href="../html/main">Click here</a> to go back to the main page!)
                 </div>
